--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -82,7 +81,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="20dp">
 
             <Button
                 android:id="@+id/startButton"
@@ -106,14 +106,30 @@
         </LinearLayout>
     </LinearLayout>
 
-    <!-- Timer History Button at the Bottom -->
-    <Button
-        android:id="@+id/historyButton"
+    <!-- Timer History and Sound Settings Buttons at the Bottom -->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Timer History"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp" />
+        android:layout_marginBottom="20dp">
+
+        <Button
+            android:id="@+id/historyButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Timer History"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="10dp" /> <!-- Optional, if you want to keep a small gap between the buttons -->
+
+        <Button
+            android:id="@+id/soundSettingsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sound Settings"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="40dp" />
+    </LinearLayout>
 
 </RelativeLayout>
